[project]
name = "sfu-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pydantic-extra-types[phonenumbers]>=2.9.0",
    "pydantic[email]>=2.9.2",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "devtools>=0.12.2",
]
